<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/title_text"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/image_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <Button
        android:id="@+id/imageSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_del"
        app:layout_constraintBottom_toBottomOf="@+id/image4"
        app:layout_constraintEnd_toEndOf="@+id/button2" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/image3"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:layout_constraintStart_toEndOf="@+id/image"
        tools:srcCompat="@tools:sample/avatars"
        />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/image4"
        app:layout_constraintTop_toTopOf="@+id/image2"
        app:layout_constraintStart_toEndOf="@+id/image2"
        tools:srcCompat="@tools:sample/avatars"
        />

    <TextView
        android:id="@+id/soundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/sound_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#B98B7E7E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSet" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/set"
        app:layout_constraintBottom_toBottomOf="@+id/soundText"
        app:layout_constraintStart_toEndOf="@+id/soundText" />

</androidx.constraintlayout.widget.ConstraintLayout>